[yubihsm_connector] Build connector from source
We keep installing the packaged version to not have to implement all
the deb installation here. Then we build and install over it from
source.

Addresses: https://git.glasklar.is/glasklar/services/sigsum-logs/-/issues/20

--- a/roles/yubihsm_connector/defaults/main.yml
+++ b/roles/yubihsm_connector/defaults/main.yml
@@ -2,3 +2,6 @@
 # Debian options.  Note that backports will be configured if the target system
 # runs Debian bookworm.  Earlier Debian distributions are not supported.
 yubihsm_connector_debian_deb_source: https://deb.debian.org/debian
+
+yubihsm_connector_source_repo: https://git.glasklar.is/linus/yubihsm-connector
+#yubihsm_connector_source_version: HEAD
