Add support for per-log bastions
Co-authored-by: William Saxmark <william.saxmark@mullvad.net>

--- a/molecule/litebastion/verify.yml
+++ b/molecule/litebastion/verify.yml
@@ -12,3 +12,10 @@
         host: "{{ litebastion_testonly_addr }}"
         port: "{{ litebastion_testonly_port }}"
         state: started
+
+    - name: Assert litebastion http port is open
+      ansible.builtin.wait_for:
+        host: "localhost"
+        port: "{{ litebastion_http_port }}"
+        state: started
+      when: litebastion_http_port != ""
