--- a/molecule/litewitness/verify.yml
+++ b/molecule/litewitness/verify.yml
@@ -62,6 +62,53 @@
         cat req | curl -s -w '%{content_type}\n%{http_code}\n' --data-binary @- http://{{ litewitness_listen_endpoint }}/add-checkpoint > rsp
         [ "$(tail -n1 rsp)" = 409 ] || exit 1
 
+    - name: Test update per-log bastions
+      become_user: "{{ litewitness_user }}"
+      become: true
+      block:
+        # TODO: remove the jq unique filter once witnessctl list-logs no longer
+        # outputs duplicate keys and bastions. See issue:
+        # https://github.com/FiloSottile/torchwood/issues/44.
+
+        - name: Test add per-log bastions
+          ansible.builtin.shell: |
+            cd /tmp
+            cat << EOF > per-log-bastions
+            go.sum database tree
+            b1.localhost:1337 b2.localhost:1337
+            EOF
+
+            ~/.local/bin/litewitness-configure {{ litewitness_database_file }} ~/.config/litewitness/log-keys ~/.config/litewitness/non-sigsum-log-keys per-log-bastions
+
+            ~/go/bin/witnessctl list-logs -db {{ litewitness_database_file }} \
+              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | unique | sort == ["b1.localhost:1337", "b2.localhost:1337"]'
+
+        - name: Test add existing per-log bastions
+          ansible.builtin.shell: |
+            cd /tmp
+            cat << EOF > per-log-bastions
+            go.sum database tree
+            b1.localhost:1337 b2.localhost:1337
+            EOF
+
+            ~/.local/bin/litewitness-configure {{ litewitness_database_file }} ~/.config/litewitness/log-keys ~/.config/litewitness/non-sigsum-log-keys per-log-bastions
+
+            ~/go/bin/witnessctl list-logs -db {{ litewitness_database_file }} \
+              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | unique | sort == ["b1.localhost:1337", "b2.localhost:1337"]'
+
+        - name: Test remove per-log bastions
+          ansible.builtin.shell: |
+            cd /tmp
+            cat << EOF > per-log-bastions
+            go.sum database tree
+            b1.localhost:1337
+            EOF
+
+            ~/.local/bin/litewitness-configure {{ litewitness_database_file }} ~/.config/litewitness/log-keys ~/.config/litewitness/non-sigsum-log-keys per-log-bastions
+
+            ~/go/bin/witnessctl list-logs -db {{ litewitness_database_file }} \
+              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | unique | sort == ["b1.localhost:1337"]'
+
     - name: Restore initial database state
       ansible.builtin.shell: |
         systemctl stop litewitness@{{ litewitness_user }}
