--- a/roles/litebastion/defaults/main.yml
+++ b/roles/litebastion/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 litebastion_gomodule: filippo.io/torchwood/cmd/litebastion
-litebastion_goversion: v0.5.0
+litebastion_goversion: v0.7.0
 litebastion_user: litebastion
 litebastion_directory: /var/lib/litebastion
 litebastion_debian_backports: false
@@ -11,6 +11,9 @@ litebastion_debian_backports: false
 litebastion_email: sysadmin@example.org
 litebastion_host: bastion.example.org
 litebastion_listen: localhost:8443
+
+# Localhost port to listen for HTTP requests from the log.
+litebastion_http_port: ""
 
 # Allowed witness backends (key hashes, hint: sigsum-key hash -k key.pub).
 # Note: litebastion will be reloaded with SIGHUP on changes to this list, and
