--- a/roles/litewitness/defaults/main.yml
+++ b/roles/litewitness/defaults/main.yml
@@ -51,6 +51,16 @@ litewitness_logs: []
 #
 # would result in "go install example.org/torchwood/cmd/litewitness@v0.3.0".
 #
+
+# Optionally discover logs to witness from a centrally managed list.  The
+# expected list format is defined by <https://witness-network.org/>.
+#
+# ---Example
+# litewitness_pull_logs:
+#   - https://testing.witness-network.org/log-list.1
+#
+litewitness_pull_logs: []
+
 litewitness_torchwood_version: "v0.7.0"  # default torchwood version
 litewitness_torchwood_source: "filippo.io/torchwood"
 litewitness_install_tools_from_torchwood:
