--- a/roles/litewitness/tasks/configure.yml
+++ b/roles/litewitness/tasks/configure.yml
@@ -17,14 +17,18 @@
 
 - name: Ensure cron job for pulling log lists is present
   ansible.builtin.cron:
-    name: "Pull log lists for litewitness to witness every 15th minute"
+    name: "Pull log lists for litewitness to witness"
     user: "{{ litewitness_user }}"
-    disabled: "{{ litewitness_pull_logs | length == 0 }}"
+    minute: "{{ litewitness_pull_logs_schedule['minute'] | default('*') }}"
+    hour: "{{ litewitness_pull_logs_schedule['hour'] | default('*') }}"
+    day: "{{ litewitness_pull_logs_schedule['day'] | default('*') }}"
+    month: "{{ litewitness_pull_logs_schedule['month'] | default('*') }}"
+    weekday: "{{ litewitness_pull_logs_schedule['weekday'] | default('*') }}"
     job: >
-      "{{ litewitness_home }}/.local/bin/litewitness-pull-logs"
-      "{{ litewitness_database_file }}"
-      "{{ litewitness_home }}/.config/litewitness/log-lists"
-    minute: "*/15"
+      {{ litewitness_home }}/.local/bin/litewitness-pull-logs
+      {{ litewitness_database_file }}
+      {{ litewitness_home }}/.config/litewitness/log-lists
+    disabled: "{{ litewitness_pull_logs | length == 0 }}"
     state: present
   notify: litewitness pull log lists
 
