Migrate molecule scenarios to extensions/molecule directory
Also adapt vars_files paths in molecule files as needed.

Closes https://git.glasklar.is/sigsum/admin/ansible/-/issues/80

--- a/extensions/molecule/litewitness/verify.yml
+++ b/extensions/molecule/litewitness/verify.yml
@@ -2,8 +2,8 @@
 - name: Verify
   hosts: all
   vars_files:
-    - ../../roles/litewitness/defaults/main.yml  # role defaults
-    - ../../roles/litewitness/vars/main.yml  # role defaults
+    - ../../../roles/litewitness/defaults/main.yml  # role defaults
+    - ../../../roles/litewitness/vars/main.yml  # role defaults
     - "host_vars/{{ inventory_hostname }}.yml"  # what converge used
   tasks:
     - name: Check litewitness systemd service
