--- a/extensions/molecule/default/verify.yml
+++ b/extensions/molecule/default/verify.yml
@@ -1,9 +1,9 @@
 ---
 - name: Ensure secondary log is up and running
   hosts:
-    - sigsum-primary-and-secondary
+    - sigsum-secondary
   vars_files:
-    - ../../roles/sigsum/defaults/main.yml  # role defaults
+    - ../../../roles/sigsum/defaults/main.yml  # role defaults
     - "host_vars/{{ inventory_hostname }}.yml"  # what converge used
     - host_vars/test.yml  # what this verify playbook additionally uses
   tasks:
@@ -20,10 +20,18 @@
       register: services
       failed_when: services.changed
 
+    - name: Check that primary log is disabled and not running
+      ansible.builtin.systemd:
+        name: "sigsum-log-primary@{{ sigsum_logname }}"
+        state: stopped
+        enabled: false
+      register: service
+      failed_when: service.changed == true
+
     # TODO: consider using ansible.builtin.uri or ensure curl is installed
     - name: Get tree head
       ansible.builtin.command: |
-        curl http://localhost:10001/{{ sigsum_url_prefix }}/get-secondary-tree-head
+        curl http://localhost:{{ sigsum_internal_endpoint | split(':') | last }}/{{ sigsum_url_prefix }}/get-secondary-tree-head
       register: secondary_tree_head
 
     - name: Parse tree size
@@ -32,9 +40,10 @@
 
 - name: Verify that primary log seems to work
   hosts:
-    - sigsum-primary-and-secondary
+    - sigsum-primary
+    - sigsum-primary-ssh-agent
   vars_files:
-    - ../../roles/sigsum/defaults/main.yml  # role defaults
+    - ../../../roles/sigsum/defaults/main.yml  # role defaults
     - "host_vars/{{ inventory_hostname }}.yml"  # what converge used
     - host_vars/test.yml  # what this verify playbook additionally uses
   tasks:
@@ -50,6 +59,14 @@
         - cron
       register: services
       failed_when: services.changed
+
+    - name: Check that secondary log is disabled and not running
+      ansible.builtin.systemd:
+        name: "sigsum-log-secondary@{{ sigsum_logname }}"
+        state: stopped
+        enabled: false
+      register: service
+      failed_when: service.changed == true
 
     - name: "Add test user {{ test_user }}"
       ansible.builtin.user:
@@ -205,15 +222,15 @@
 
 - name: Ensure secondary log has the expected tree size
   hosts:
-    - sigsum-primary-and-secondary
+    - sigsum-secondary
   vars_files:
-    - ../../roles/sigsum/defaults/main.yml  # role defaults
+    - ../../../roles/sigsum/defaults/main.yml  # role defaults
     - "host_vars/{{ inventory_hostname }}.yml"  # what converge used
     - host_vars/test.yml  # what this verify playbook additionally uses
   tasks:
     - name: Get tree head
       ansible.builtin.command: |
-        curl http://localhost:10001/{{ sigsum_url_prefix }}/get-secondary-tree-head
+        curl http://localhost:{{ sigsum_internal_endpoint | split(':') | last }}/{{ sigsum_url_prefix }}/get-secondary-tree-head
       register: secondary_tree_head
 
     - name: Parse tree size
@@ -223,3 +240,18 @@
     - name: Assert correct tree size
       ansible.builtin.assert:
         that: (secondary_tree_size|int + test_num_messages) == new_secondary_tree_size|int
+
+- name: Verify that log can be restarted by {{ sigsum_user }} user
+  hosts:
+    - sigsum-primary
+    - sigsum-secondary
+  vars_files:
+    - ../../../roles/sigsum/defaults/main.yml  # role defaults
+    - "host_vars/{{ inventory_hostname }}.yml"  # what converge used
+    - host_vars/test.yml  # what this verify playbook additionally uses
+  tasks:
+    - name: Restart log as {{ sigsum_user }} user
+      ansible.builtin.shell: |
+        sudo /usr/bin/systemctl restart "sigsum-log-{{ sigsum_role }}@{{ sigsum_logname }}"
+      become_user: "{{ sigsum_user }}"
+      become: true
