--- a/roles/golang/tasks/main.yml
+++ b/roles/golang/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install golang
-  ansible.builtin.include_tasks: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_tasks: "{{ ansible_facts['os_family'] }}.yml"
 
 - name: Ensure minimum Go version
   ansible.builtin.include_tasks: min_version.yml
