--- a/roles/litebastion/tasks/main.yml
+++ b/roles/litebastion/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Include distribution-dependent variables
-  ansible.builtin.include_vars: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_vars: "{{ ansible_facts['os_family'] }}.yml"
 
 - name: Install and configure the litebastion service
   ansible.builtin.include_tasks: litebastion.yml
