--- a/roles/yubihsm_connector/tasks/main.yml
+++ b/roles/yubihsm_connector/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: Install yubihsm-connector
-  ansible.builtin.include_tasks: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_tasks: "{{ ansible_facts['os_family'] }}.yml"
