Set column_case_sensitive to false for community.mysql.mysql_user tasks
This change avoids warning about column_case_sensitive not being set,
and should help avoid surprises later when default behavior is changed.

See https://docs.ansible.com/projects/ansible/latest/collections/community/mysql/mysql_user_module.html#parameter-column_case_sensitive

Closes https://git.glasklar.is/sigsum/admin/ansible/-/issues/84

--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -61,6 +61,7 @@
     login_password: "{{ mysql_root_password }}"
     login_unix_socket: "/run/mysqld/mysqld.sock"
     state: present
+    column_case_sensitive: false
   no_log: True
   with_items: '{{ mysql_users }}'
 
@@ -72,6 +73,7 @@
     name: '{{ item.0.user}}'
     append_privs: yes
     priv: '{{item.1}}'
+    column_case_sensitive: false
   no_log: True
   with_subelements:
     - "{{ mysql_users }}"
