Set column_case_sensitive to false for community.mysql.mysql_user tasks
This change avoids warning about column_case_sensitive not being set,
and should help avoid surprises later when default behavior is changed.

See https://docs.ansible.com/projects/ansible/latest/collections/community/mysql/mysql_user_module.html#parameter-column_case_sensitive

See also https://git.glasklar.is/sigsum/admin/ansible/-/issues/84

--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -46,6 +46,7 @@
         login_user: root
         login_unix_socket: "/run/mysqld/mysqld.sock"
         state: present
+        column_case_sensitive: false
       no_log: True
       with_items:
         - 127.0.0.1
