--- a/roles/litewitness/defaults/main.yml
+++ b/roles/litewitness/defaults/main.yml
@@ -51,15 +51,18 @@ litewitness_pull_logs_schedule:
 #   * litewitness_bastion_endpoint (use to specify a bastion host for all logs)
 #   * litewitness_listen_endpoint (use to run without bastion hosts)
 #
-# If you decide to run without bastion hosts (https://c2sp.org/https-bastion),
-# then you need to sort out your own HTTPS reverse proxy for the witness.
+# If neither option is populated, the witness will only be accessible via
+# per-log bastions. If you decide to run without bastion hosts
+# (https://c2sp.org/https-bastion), then you need to sort out your own HTTPS
+# reverse proxy for the witness.
 #
 # ---Example
 # litewitness_bastion_endpoint: "bastion.example.org:443"
 # litewitness_listen_endpoint: "127.0.0.1:2009"
 #
+litewitness_bastion_endpoint: ""
+litewitness_listen_endpoint: ""
 
-#
 # Go dependencies.  For each of the listed tools it is possible to override the
 # default version and Go repository by also specifying "version" and "source" as
 # additional dict members alongside "name".  Note that the listed tools are
