--- a/roles/litewitness/tasks/constraints.yml
+++ b/roles/litewitness/tasks/constraints.yml
@@ -1,5 +1,5 @@
 ---
 - name: Enforce valid endpoint configuration
   ansible.builtin.assert:
-    that: (litewitness_listen_endpoint is defined) != (litewitness_bastion_endpoint is defined)
-    fail_msg: "Either litewitness_bastion_endpoint or litewitness_listen_endpoint must be defined"
+    that: not (litewitness_listen_endpoint != "" and litewitness_bastion_endpoint != "")
+    fail_msg: "litewitness_bastion_endpoint and litewitness_listen_endpoint are mutually exclusive"
