--- a/extensions/molecule/litewitness/verify.yml
+++ b/extensions/molecule/litewitness/verify.yml
@@ -68,9 +68,6 @@
       become_user: "{{ litewitness_user }}"
       become: true
       block:
-        # TODO: remove the jq unique filter once witnessctl list-logs no longer
-        # outputs duplicate keys and bastions. See issue:
-        # https://github.com/FiloSottile/torchwood/issues/44.
 
         - name: Test add per-log bastions
           ansible.builtin.shell: |
@@ -83,7 +80,7 @@
             ~/.local/bin/litewitness-configure {{ litewitness_database_file }} ~/.config/litewitness/log-keys ~/.config/litewitness/non-sigsum-log-keys per-log-bastions
 
             ~/go/bin/witnessctl list-logs -db {{ litewitness_database_file }} \
-              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | unique | sort == ["b1.localhost:1337", "b2.localhost:1337"]'
+              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | sort == ["b1.localhost:1337", "b2.localhost:1337"]'
 
         - name: Test add existing per-log bastions
           ansible.builtin.shell: |
@@ -96,7 +93,7 @@
             ~/.local/bin/litewitness-configure {{ litewitness_database_file }} ~/.config/litewitness/log-keys ~/.config/litewitness/non-sigsum-log-keys per-log-bastions
 
             ~/go/bin/witnessctl list-logs -db {{ litewitness_database_file }} \
-              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | unique | sort == ["b1.localhost:1337", "b2.localhost:1337"]'
+              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | sort == ["b1.localhost:1337", "b2.localhost:1337"]'
 
         - name: Test remove per-log bastions
           ansible.builtin.shell: |
@@ -109,7 +106,7 @@
             ~/.local/bin/litewitness-configure {{ litewitness_database_file }} ~/.config/litewitness/log-keys ~/.config/litewitness/non-sigsum-log-keys per-log-bastions
 
             ~/go/bin/witnessctl list-logs -db {{ litewitness_database_file }} \
-              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | unique | sort == ["b1.localhost:1337"]'
+              | jq -e -s '.[] | select(.origin == "go.sum database tree") | .bastions | sort == ["b1.localhost:1337"]'
 
     - name: Restore initial database state
       ansible.builtin.shell: |
