--- a/roles/litewitness/defaults/main.yml
+++ b/roles/litewitness/defaults/main.yml
@@ -74,7 +74,7 @@ litewitness_listen_endpoint: ""
 #
 # would result in "go install example.org/torchwood/cmd/litewitness@v0.3.0".
 #
-litewitness_torchwood_version: "v0.7.0"  # default torchwood version
+litewitness_torchwood_version: "v0.9.0"
 litewitness_torchwood_source: "filippo.io/torchwood"
 litewitness_install_tools_from_torchwood:
   - {
